--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-ionicons-icon",
-  "version": "0.1.0",
-  "description": "Made with create-react-library",
+  "version": "0.1.1",
+  "description": "Implementation of Ionicons icons in react components",
   "author": "Simonbelete",
   "license": "MIT",
   "repository": "Simonbelete/react-ionicons-icon",
